--- a/server/views/components/typography.njk
+++ b/server/views/components/typography.njk
@@ -1,21 +1,28 @@
 {% extends "layouts/_layout.njk" %}
-{% set title = "Lists" %}
+{% set title = "Typography" %}
 
 {% block body %}
 
 	<div class="container">
 
-		<h1>Links</h1>
+		<h1>This is a heading<br>level 1 heading</h1>
+		<h2>This is a heading<br>level 2 heading</h2>
+		<h3>This is a heading<br>level 3 heading</h3>
+		<h4>This is a heading<br>level 4 heading</h4>
+		<h5>This is a heading<br>level 5 heading</h5>
+		<h6>This is a heading<br>level 6 heading</h6>
 
-		<h2>Body copy links</h2>
+		<h2>Links</h2>
+
+		<h3>Body copy links</h3>
 
 		<p>
 			This is <a href="#">a link</a> in some body copy.
 		</p>
 
-		<h2>Inverse links</h2>
+		<h3>Inverse links</h3>
 
-		<div class="panel panel--dark">
+		<div class="panel panel--inverse">
 			<h3><a href="#">This is a heading 3</a></h3>
 			<p>
 				This is <a href="#">a link</a> in some body copy.
@@ -35,7 +42,7 @@
 			</p>
 		</div>
 
-		<h2>Header links</h2>
+		<h3>Header links</h3>
 
 		<h1><a href="#">This is a heading 1</a></h1>
 		<h2><a href="#">This is a heading 2</a></h2>
