--- a/src/components/container/_container.scss
+++ b/src/components/container/_container.scss
@@ -6,8 +6,9 @@
 /// @since 0.1.0
 %container {
   margin: auto;
-  max-width: rem(1170px);
-  width: 96%;
+  max-width: rem($nice-container-max-width);
+  width: 96%; // Fallback for non-calc browsers e.g. IE8, see https://caniuse.com/#feat=calc
+  width: calc(100% - #{rem($spacing-large)}); // sass-lint:disable-line no-duplicate-properties
 }
 
 /// Container, used as a wrapper around sections within a page.
