--- a/src/components/panel/_panel.scss
+++ b/src/components/panel/_panel.scss
@@ -7,6 +7,7 @@
 /// @since 0.1.0
 .panel {
   background: $colour-panel-default;
+  border: 1px solid $colour-panel-default-border; // To distinguish panel from off-grey body background
   margin: em($spacing-medium 0 $spacing-large);
   padding: em($spacing-medium);
 
@@ -30,5 +31,6 @@
 .panel--inverse {
   @include links-inverse;
   background: $colour-panel-inverse;
+  border: 0;
   color: $colour-text-inverse;
 }
